test/success/integration/_succ_decl_funct_1.hs
x :: Char -> Char -> Char
x y z = y
main = print "hello"