test/fail/integration/_fail_sem_expr_funct_call_6.hs
x :: Int -> Int
x y = y
y :: Int
y = x True
main = print "hello"